[package]
name = "web-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
duckdb = { version = "1.1", features = ["bundled"] }
env_logger = "0.10"
log = "0.4"
askama = "0.12"
# Pinning chrono to avoid conflict with arrow-arith's internal trait
chrono = "=0.4.38" 
